seeding_pipeline/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podcast-kg
  labels:
    name: podcast-kg
    app.kubernetes.io/name: podcast-kg-pipeline
    app.kubernetes.io/instance: production
